objects/B25__Sync_Field_Mapping__mdt.object
<CustomObject>
    <description>Contains mapping for Salesforce sObject Fields to external API fields</description>
    <fields>
        <fullName>B25__API_Field__c</fullName>
        <label>API Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B25__SObject_Field__c</fullName>
        <label>sObject Field</label>
        <metadataRelationshipControllingField>B25__Sync_Field_Mapping__mdt.B25__SObject_Type__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Sync_Field_Mappings</relationshipLabel>
        <relationshipName>Sync_Field_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>B25__SObject_Type__c</fullName>
        <label>sObject Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Sync_Field_Mappings</relationshipLabel>
        <relationshipName>Sync_Field_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Sync Field Mapping</label>
    <pluralLabel>Sync Field Mappings</pluralLabel>
</CustomObject>